--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,13 +37,11 @@ endorsed.classpath=
 excludes=
 file.reference.jdatepicker-1.3.2.jar=C:\\jdatepicker-1.3.2.jar
 file.reference.mysql-connector-j-8.2.0.jar=C:\\Users\\nikhi\\Downloads\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0.jar
-file.reference.rs2xml.jar=C:\\Users\\nikhi\\OneDrive\\Desktop\\rs2xml.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-j-8.2.0.jar}:\
-    ${file.reference.jdatepicker-1.3.2.jar}:\
-    ${file.reference.rs2xml.jar}
+    ${file.reference.jdatepicker-1.3.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
